# wdict

./: .anjuta_sym_db.db  AUTHORS  Makefile.in  README  README.md  configure  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
.git.~1~/: FETCH_HEAD
.git.~1~/logs.~1~/refs.~1~/remotes.~1~/origin.~1~/: master.~1~
.git.~1~/refs.~1~/remotes.~1~/origin.~1~/: master.~1~
Debug/: Makefile  config.h  config.status  libtool
Debug/data/: Makefile
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile
Debug/src/.deps/: main.Po  wldictquery.Po  wldictwindow.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  main.c  wldictquery.c  wldictquery.h  wldictsession.c  wldictsession.h  wldictwindow.c  wldictwindow.h  wlwaittext.c  wlwaittext.h
